--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,169 @@
   margin-bottom: 2em;
 }
 
+.section {
+  margin-bottom: 2em;
+}
+
 .isEmpty {
   color: red;
+}
+
+/*AddTags related*/
+.react-tags {
+  position: relative;
+  padding: 6px 0 0 6px;
+  border: 1px solid #979797;
+  border-radius: 1px;
+  margin-bottom: 1em;
+  cursor: text; /* clicking anywhere will focus the input */
+}
+
+.react-tags.is-focused {
+  border-color: #b1b1b1;
+}
+
+.react-tags__selected {
+  display: inline;
+}
+
+.react-tags__selected-tag {
+  display: inline-block;
+  box-sizing: border-box;
+  margin: 0 6px 6px 0;
+  padding: 6px 8px;
+  border: none;
+  color: #fff;
+  text-transform: capitalize;
+  border-radius: 2px;
+  background: #27a42c;
+  cursor: pointer;
+}
+
+.react-tags__selected-tag:after {
+  content: '\2715';
+  color: #fff;
+  margin-left: 8px;
+  font-size: .8em;
+}
+
+.react-tags__search {
+  display: inline-block;
+  padding: 7px 2px;
+  margin-bottom: 6px;
+  max-width: 100%; /* prevent autoresize overflowing the container */
+}
+
+@media screen and (min-width: 30em) {
+  .react-tags__search {
+    position: relative; /* this will become the offsetParent for suggestions */
+  }
+}
+
+.react-tags__search input {
+  max-width: 100%; /* prevent autoresize overflowing the container */
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: none;
+}
+
+.react-tags__search input::-ms-clear {
+  display: none;
+}
+
+.react-tags__suggestions {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+}
+
+@media screen and (min-width: 30em) {
+
+  .react-tags__suggestions {
+    width: 240px;
+  }
+
+}
+
+.react-tags__suggestions ul {
+  margin: 4px -1px;
+  padding: 0;
+  list-style: none;
+  background: white;
+  border: 1px solid #d1d1d1;
+  border-radius: 2px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
+}
+
+.react-tags__suggestions li {
+  border-bottom: 1px solid #ddd;
+  padding: 6px 8px;
+}
+
+.react-tags__suggestions li mark {
+  text-decoration: underline;
+  background: none;
+  font-weight: 600;
+}
+
+.react-tags__suggestions li:hover {
+  cursor: pointer;
+  background: #eee;
+}
+
+.react-tags__suggestions li.is-active {
+  background: #b7cfe0;
+}
+
+.react-tags__suggestions li.is-disabled {
+  opacity: 0.5;
+  cursor: auto;
+}
+
+
+/*tagsList*/
+.tagsList {
+  padding: 0;
+  margin: 0;
+  margin-left: -.18em;
+  list-style-type: none;
+  flex-wrap: wrap;
+  display: flex;
+}
+
+.tagButton {
+  padding: .8em 1em;
+  border: 1px solid #979797;
+  border-radius: 3px;
+  background-color: #fff;
+  box-shadow: none;
+  margin: .3em;
+  display: inline-block;
+  cursor: pointer;
+  font-style: normal;
+  outline: 0;
+  text-decoration: none;
+  user-select: none;
+  -webkit-appearance: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.tagButtonAdd {
+  margin-left: 1em;
+  color: #00adef;
+  text-transform: capitalize;
+}
+
+
+
+
+/*errorMessage*/
+.errorMessage {
+  color: #bd413f;
+  margin-bottom: .7em;
+  font-size: 14px;
 }
